@@ -104,3 +104,4 @@ Changes in version 1.11.x
 + cluster: Overwrite old results instead of failing
 + getPrevalence: bugfix, if assay contains NA values, it does not end up to NA anymore.
 + getExperimentCrossCorrelation fix: enable using of sampleMap in MAE.
++ Implemented the setTaxonomyRanks function to specify which ranks are recognized as taxonomy ranks.
